# shrimPy

./: .flake8  .git-blame-ignore-revs  .gitignore  .gitmodules  .pre-commit-config.yaml  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  mantis_env_osx_arm64.sh  mantis_env_osx_arm64.yml  pyproject.toml  setup.py
.github/workflows/: pull-request-ci.yml
acquisition/: acquire.py
acquisition/examples/: ls_acquisition.py  nidaqmx_lf_triggering.py
acquisition/hook_functions/: daq_control.py
acquisition/util/: convenience.py
config/: illumination.csv  logging.ini
config/mda/mantis/: demo.yaml  dynatrack_demo.yaml  justin.yaml  mantis.yaml  test_dynatrack.yaml
config/mm-config/: MMConfig_demo.cfg  mantis-V2.cfg
docs/: data_structure.md  illumination.csv  mantis_usage.md  platemap.csv  positions.csv  setup_guide.md
examples/: acquire_data.py  acquire_defocus_stack.py  calibrate_kim101.py  debug.py  example_viewer.py  logger.py  logger_example_2.py  ls_acquisition.py  map_to_hsv.py  nidaqmax_counter_example.py  pvcam_11bit_acq.py  pvcam_jvm_debugging.py  test_autoexposure.py  test_kim101_copylot.py  test_kim101_stage.py  test_simultaneous_acq.py  write_pos_csv.py
examples/acquisition_settings/: demo_acquisition_settings.yaml  example_acquisition_settings.yaml  example_mda_sequence.yaml  mantis2_demo_mda.yaml  mantis2_mantis_mda.yaml  mantis2_mda.yaml  shrimpy_demo_mda.yaml
examples/iohub-slurm/: batch.sh  gather.py  gather.sh  process.py  process.sh
examples/microscope_configs/: Squid_Oryx_Linux.cfg  Squid_Oryx_Windows.cfg
examples/slurm_option1/: batch.sh  deskew.sh  empty_zarr.py  empty_zarr.sh
examples/slurmkit_example/: _slurm_stitch.py  _slurm_stitch_parallel.py  sequential.py  slurm_apply_affine.py  slurm_copy_n_paste.py  slurm_crop.py  slurm_deskew.py  slurm_phase3D.py  slurm_register.py  slurm_shift.py  slurm_stitch.py  slurm_z_drift_correction.py  slurmkit_ants_affine.py  slurmkit_cellpose_segmentation.py  slurmkit_combine_datasets.py  slurmkit_lir_crop.py  slurmkit_stabilize.py  slurmkit_volume_stabilization.py
mantis/: __init__.py  launch_mantis_gui.py  mantis_v2.py
mantis/acquisition/: AcquisitionSettings.py  BaseSettings.py  acq_engine.py  acquire.py  autoexposure.py  autotracker.py  launch_mantis_gui.py  logger.py  logger_test.py  mantis_acquisition_settings.py  mantis_acquisition_widget.py  mantis_logger.py  mantis_v2.py  microscope_operations.py  run_acquisition.py  settings.py  viewer.py
mantis/acquisition/archive/: acquire.py  kazansky_test.py  multiwell_automation.py  zebrafish_acquisition.ipynb  zebrafish_acquisition_v2.ipynb  zebrafish_acquisition_v4.ipynb  zebrafish_autotracker.py  zebrafish_autotracker_iSim_v2.py  zebrafish_autotracker_mantis.py
mantis/acquisition/hook_functions/: autofocus.py  autotracker_hook_function.py  config.py  daq_control.py  globals.py  image_saved_hook_functions.py  post_camera_hook_functions.py  post_hardware_hook_functions.py  pre_hardware_hook_functions.py
mantis/acquisition/scripts/: calibrate_O3_piezo.py  clean_up_position_list.py  measure_psf.py  ops_acquire_beads.py  ops_acquisition.py  ops_acquisition_BF_only.py  ops_acquisition_backup.py  ops_acquisition_reduced_tracking.py  ops_transfer_position_list.py  run_acquisition.py  run_demo_acquisition.py
mantis/acquisition/settings/: archive_mantis_acquisition_settings.py  (+6 more)
mantis/analysis/: 2d_project.py  AnalysisSettings.py  analyze_psf.py  deskew.py  deskew_mm_dataset.py  deskew_params.yml  deskew_settings.py  deskew_settings.yml  drift_correction.py  estimate_deskew.py  mantis_deskew.py  multiproc_phase_recon.py  register.py  registration.py  simple_deskew.py  simple_phase_recon.py  stabilize.py  stitch.py  visualization.py
mantis/archive/: acq_engine.py  logger.py
mantis/cli/: apply_affine.py  apply_registration.py  characterize.py  characterize_psf.py  concat_datasets.py  concatenate.py  deconvolve.py  deskew.py  estimate_affine.py  estimate_bleaching.py  estimate_deskew.py  estimate_psf.py  estimate_registration.py  estimate_stabilization.py  estimate_stitch.py  main.py  optimize_affine.py  optimize_registration.py  option_eat_all.py  par_deskew.py  parsing.py  printing.py  psf_from_beads.py  register.py  run_acquisition.py  stabilization.py  stabilize.py  stir_plate.py  stitch.py  stitch_submitit.py  update_scale.py  update_scale_metadata.py  utils.py
mantis/tests/: conftest.py  micromanager_mocks.py  test_cli.py  test_mantis_logger.py
notebooks/: nidaqmax counter example.ipynb  run two simultaneous acq.ipynb  test two mm.ipynb  zebrafish_acquisition_v3.ipynb
scripts/: calibrate_O3_piezo.py  debug_acq.py  debug_seq_acq.py  debug_two_acq.py  measure_psf.py  multiwell_automation.py  pcc_on_phase_vs.py  pcc_on_vs.py  shrimpy_writer_acquire-zarr.py  zebrafish_autotracker.py  zebrafish_autotracker_iSim.py  zebrafish_autotracker_mantis.py  zebrafish_autotracker_mantis_v2.py  zebrafish_imaging.py
scripts/archive/: logger_example_2.py  test_autoexposure.py  test_find_focus.py  test_kim101_pylablib.py
shrimpy/: __init__.py  _logging.py  robust_cmmcore.py
shrimpy/acquisition/: AcquisitionSettings.py  acq_engine.py  autoexposure.py  logger.py  microscope_operations.py
shrimpy/analysis/: AnalysisSettings.py  deskew.py
shrimpy/cli/: acquire.py  apply_affine.py  deskew.py  estimate_affine.py  estimate_bleaching.py  estimate_deskew.py  estimate_stabilization.py  gui.py  main.py  optimize_affine.py  parsing.py  run_acquisition.py  stabilize.py  update_scale_metadata.py
shrimpy/mantis/: acquisition_controller.py  autoexposure.py  dynatrack.py  dynatrack_preprocessing.py  dynatrack_worker.py  launch_mantis_gui.py  mantis_acquisition_widget.py  mantis_engine.py  mantis_logger.py  mantis_v2.py  position_update.py  replay_camera.py
shrimpy/plans/: acquisition_controller.md
shrimpy/tests/: conftest.py  test_acquisition_controller.py  test_cli.py  test_dynatrack.py  test_mantis_engine.py  test_mantis_integration.py  test_mantis_logger.py  test_position_update.py  test_replay_camera.py  test_robust_cmmcore.py
(+79 files in other folders)
