[build-system]
requires = ["setuptools >= 61", "setuptools_scm[toml]>=8.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shrimpy"
description = "Custom acquisition engines for optical microscopes based on pymmcore-plus"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11, <4.0"

# the dynamically determined project metadata attributes
dynamic = ["version"]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
]

# list package dependencies here
dependencies = [
  "click",
  "numpy",
  "ome-writers[all]",
  "pymmcore_plus==0.17.0",
  "pymmcore-widgets",
  "PyYAML",
  "qtpy",
  "useq-schema",
]


[project.optional-dependencies]
# note that dev dependencies are only pinned to major versions
dev = [
  "pre-commit~=2.19",
  "pytest~=7.1",
  "ruff~=0.8",
]
build = ["build", "twine"]

[project.scripts]
shrimpy = "shrimpy.cli.main:cli"

[tool.setuptools]
# allow use of __file__ to load data files included in the package
zip-safe = false

[tool.setuptools.packages.find]
# Discover shrimpy and all subpackages (e.g., shrimpy.mantis)
where = ["."]
include = ["shrimpy*"]
exclude = ["shrimpy.tests*"]

[tool.setuptools_scm]
# Version is derived from git tags
# Format: for tagged commits: "1.2.0"
#         for dev commits: "1.2.0.post3+ge9f2970"
version_scheme = "post-release"
local_scheme = "no-local-version"

[tool.ruff]
# Ruff replaces black, isort, flake8, and pylint
line-length = 95
target-version = "py311"

# Exclude non-package code
exclude = ["archive", "examples", "scripts"]

[tool.ruff.lint]
# Enable rule sets:
# F = pyflakes
# E/W = pycodestyle errors/warnings
# I = isort
# N = pep8-naming
# UP = pyupgrade
# B = flake8-bugbear
select = ["F", "E", "W", "I", "N", "UP", "B"]

# Ignore rules to match current flake8 config (ignores C, R, W categories)
ignore = [
    "E501",  # Line too long (handled by formatter)
    "N802",  # Function name should be lowercase (Qt uses camelCase)
    "N815",  # Variable in class scope should not be mixedCase (Qt uses camelCase)
]

[tool.ruff.lint.isort]
# Match current isort settings
lines-between-types = 1
known-first-party = ["shrimpy"]

[tool.ruff.format]
docstring-code-format = true

[tool.pytest.ini_options]
testpaths = ["shrimpy/tests"]
