[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "shrimpy"
description = "Custom acquisition engines for optical microscopes based on pymmcore-plus"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11, <4.0"

# the dynamically determined project metadata attributes
dynamic = ["version"]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
]

# list package dependencies here
dependencies = [
  "click",
  "numpy",
  "ome-writers[acquire-zarr]",
  "pymmcore-plus",
  "pymmcore-widgets",
  "PyYAML",
  "qtpy",
  "useq-schema",
]


[project.optional-dependencies]
build = ["build", "twine"]

[dependency-groups]
dev = [
  "pre-commit~=4.5",
  "pytest~=9.0",
  "ruff~=0.15",
]

[project.scripts]
shrimpy = "shrimpy.cli.main:cli"

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
version_scheme = "post-release"
local_scheme = "no-local-version"

[tool.hatch.build.targets.wheel]
packages = ["shrimpy"]

[tool.uv.sources]
ome-writers = { path = "../ome-writers", editable = true }
pymmcore-plus = { path = "../pymmcore-plus", editable = true }

[tool.ruff]
# Ruff replaces black, isort, flake8, and pylint
line-length = 95
target-version = "py311"

# Exclude non-package code
exclude = ["archive", "examples", "scripts"]

[tool.ruff.lint]
# Enable rule sets:
# F = pyflakes
# E/W = pycodestyle errors/warnings
# I = isort
# N = pep8-naming
# UP = pyupgrade
# B = flake8-bugbear
select = ["F", "E", "W", "I", "N", "UP", "B"]

# Ignore rules to match current flake8 config (ignores C, R, W categories)
ignore = [
    "E501",  # Line too long (handled by formatter)
    "N802",  # Function name should be lowercase (Qt uses camelCase)
    "N815",  # Variable in class scope should not be mixedCase (Qt uses camelCase)
]

[tool.ruff.lint.isort]
# Match current isort settings
lines-between-types = 1
known-first-party = ["shrimpy"]

[tool.ruff.format]
docstring-code-format = true

[tool.pytest.ini_options]
testpaths = ["shrimpy/tests"]
