[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "shrimpy"
description = "Custom acquisition engines for optical microscopes based on pymmcore-plus"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11, <4.0"

# the dynamically determined project metadata attributes
dynamic = ["version"]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
]

# list package dependencies here
dependencies = [
  "click",
  "numpy",
  "ome-writers[acquire-zarr]",
  # TODO: test v0.7.0, even simple acquisitions would fail
  "acquire-zarr==0.6.0",
  "pymmcore>=11.14.0.75.0",
  "pymmcore-gui",
  "pymmcore-plus",
  "pymmcore-widgets",
  "PyYAML",
  "qtpy",
  "useq-schema",
  "acquire-zarr==0.6.0",  # v0.7.0 causes acq to crash
]


[project.optional-dependencies]
build = ["build", "twine"]

[dependency-groups]
dev = [
  "pre-commit~=4.5",
  "pytest~=9.0",
  "ruff~=0.15",
  "iohub==0.3.0a7",
  "ipykernel",
]
dynatrack = [
  "biahub",
  "torch",
  "viscy",
  "waveorder==3.0.2",
]

[project.scripts]
shrimpy = "shrimpy.cli.main:cli"

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
version_scheme = "post-release"
local_scheme = "no-local-version"

[tool.hatch.build.targets.wheel]
packages = ["shrimpy"]

[tool.uv.sources]
# ome-writers = { git = "https://github.com/ieivanov/ome-writers", branch = "main" }
# pymmcore-plus = { git = "https://github.com/ieivanov/pymmcore-plus", branch = "main" }
# biahub = { path = "../biahub", editable = true } # no pipy release
biahub = { git = "https://github.com/czbiohub-sf/biahub", branch = "fast_deskew" }
ome-writers = { path = "../ome-writers", editable = true } # add-plate-row-col branch
pymmcore-gui = { path = "../pymmcore-gui", editable = true } # no recent pipy release
pymmcore-plus = { path = "../pymmcore-plus", editable = true } # dev branch
useq-schema = { path = "../useq-schema", editable = true } # add-plate-row-col branch
# viscy = { path = "../viscy", editable = true } # waveorder dependency, issue
viscy = { git = "https://github.com/mehta-lab/VisCy", rev = "6ba3446db8b02383e25e1bc5424a20268249ee7d" }
torch = { index = "pytorch" }

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[tool.ruff]
# Ruff replaces black, isort, flake8, and pylint
line-length = 95
target-version = "py311"

# Exclude non-package code
exclude = ["archive", "examples", "scripts"]

[tool.ruff.lint]
# Enable rule sets:
# F = pyflakes
# E/W = pycodestyle errors/warnings
# I = isort
# N = pep8-naming
# UP = pyupgrade
# B = flake8-bugbear
select = ["F", "E", "W", "I", "N", "UP", "B"]

# Ignore rules to match current flake8 config (ignores C, R, W categories)
ignore = [
    "E501",  # Line too long (handled by formatter)
    "N802",  # Function name should be lowercase (Qt uses camelCase)
    "N815",  # Variable in class scope should not be mixedCase (Qt uses camelCase)
]

[tool.ruff.lint.isort]
# Match current isort settings
lines-between-types = 1
known-first-party = ["shrimpy"]

[tool.ruff.format]
docstring-code-format = true

[tool.pytest.ini_options]
testpaths = ["shrimpy/tests"]
